--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "automate-render-service",
   "version": "1.0.0",
   "description": "",
-  "main": "resume.js",
+  "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node script"
   },
   "keywords": [],
   "author": "",
